# rust-ewasm

./: README.md
calldatacopy/: Makefile  calldatacopy-bloated.wasm  calldatacopy-bloated.wat  calldatacopy.rs  calldatacopy.wasm  calldatacopy.wat
calldatasize/: Makefile  calldatasize-bloated.wasm  calldatasize-bloated.wat  calldatasize.rs  calldatasize.wasm  calldatasize.wat
ecadd/: Cargo.toml  Makefile  ecadd-bloated.wasm  ecadd-bloated.wat  ecadd.wasm  ecadd.wat
ecadd/src/: ecadd.rs
ecpairing/: Cargo.toml  Makefile  ecpairing-bloated.wasm  ecpairing-bloated.wat  ecpairing.wasm  ecpairing.wat
ecpairing/src/: ecpairing.rs
ewasm-token/: Cargo.toml  Makefile  bin2hex.js  binary2hex  compile.sh  ewasm_token-bloated.wasm  ewasm_token-bloated.wat  ewasm_token.rs  ewasm_token.wasm  ewasm_token.wat  ewasm_token_env_ethereum.wasm  footer.txt  header.txt
ewasm-token/src/: ewasm_token.rs
sstore/: Makefile  sstore-bloated.wasm  sstore-bloated.wat  sstore.rs  sstore.wasm  sstore.wat
wasm-parser/: Cargo.toml  Makefile  ewasm-parser-bloated.wasm  ewasm-parser.wasm
wasm-parser/src/: parse-wasm.rs
